# nutricoreiq_prod

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  Dockerfile.nginx  README.md  alembic.ini  certbot-entrypoint.sh  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  loki-config.yaml  promtail-config.yaml  pyproject.toml
.github/workflows/: ci.yml
analize/: README.md  architecture.md  business-logic.md  codestyle.md  configuration.md  database-models.md  deployment.md  documentation.md  performance.md  security.md  testing.md
analize/src/: README.md  main.py.md
analize/src/core/: logger.py.md
analize/src/crud/: user.py.md
analize/src/models/: product_nutrient.py.md  user.py.md
analize/src/routers/: auth.py.md
analize/src/schemas/: user.py.md
config/: alloy-config.alloy  loki-config.yaml  lokiexplore.yaml  prometheus.yml  promtail-config.yaml
scripts/: deploy.sh  entrypoint.sh
src/app/: docker-compose.dev.yml  lifespan.py  main.py
src/app/alembic/: env.py
src/app/core/: __init__.py  app.py  config.py  constants.py  db_helper.py  dependencies.py  exception_handlers.py  exceptions.py  logger.py  redis.py
src/app/core/config/: auth.py  (+15 more)
src/app/crud/: profile.py  user.py
src/app/models/: __init__.py  base.py  product_nutrient.py  user.py
src/app/repo/: pending_product.py  product.py
src/app/routers/: __init__.py  auth.py  debug.py  info.py  privacy.py  product.py  security.py  user.py
src/app/schemas/: base.py  product.py  responses.py  user.py
src/app/tasks/: welcome_email_notification.py
src/app/templates/: base-test.html  base.html  index.html  profile.html  test.html
tests/: conftest.py  test_logger.py
tests/integration/: test_middleware_integration.py
tests/unit/: test_exception_handlers.py  test_middleware_services.py
tests/unit/test_config/: test_config_models.py
tests/unit/test_crud/: test_profile.py  test_user.py  test_user_crud.py
tests/unit/test_domain/: test_health.py
tests/unit/test_middleware/: test_middleware_services.py
tests/unit/test_models/: test_privacy_consent_models.py  test_user_models.py
tests/unit/test_repo/: test_pending_product.py  test_privacy_consent.py  test_product.py  test_product_repo.py  test_profile.py  test_user.py
tests/unit/test_routers/: test_auth_router.py  test_info.py  test_privacy.py  test_product_router.py  test_security.py  test_user_router.py
(+108 files in other folders)
