[project]
name = "nutricoreiq"
version = "0.1.0"
description = ""
requires-python = ">=3.13"
dependencies = [
    "fastapi[all]>=0.115.11",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "uvicorn>=0.34.3",
    "gunicorn>=23.0.0",
    "pydantic-settings>=2.8.1",
    "sqlalchemy>=2.0.41",
    "alembic>=1.15.1",
    "asyncpg>=0.30.0",
    "pyjwt[crypto]>=2.10.1",
    "bcrypt>=4.3.0",
    "python-multipart>=0.0.20",
    "redis>=6.2.0",
    "httpx>=0.28.1",
    "aiosmtplib>=4.0.1",
    "taskiq>=0.11.18",
    "taskiq-aio-pika>=0.4.3",
    "taskiq-fastapi>=0.3.5",
    "jinja2>=3.1.6",
    "tenacity>=9.1.2",
    "sentry-sdk[fastapi]>=2.34.1",
    "slowapi>=0.1.9",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pre-commit>=4.0.1",
    "black>=25.1.0",
    "pytest-asyncio>=0.25.3",
    "pytest-mock>=3.14.0",
    "pylint>=3.3.5",
    "ruff>=0.11.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.13.0",
    "httpx>=0.28.1",
    "bcrypt>=4.2.0",
]

[tool.uv]
package = false

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
follow_imports = "skip"
check_untyped_defs = true
disallow_any_unimported = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
extend-select = ["I"]

[tool.pylint.main]
py-version = "3.13"

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--strict-config",
    "--durations=3"
]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: slow running tests",
    "integration: integration tests",
    "e2e: end-to-end tests requiring running services",
    "asyncio: asynchronous tests",
    "db: tests requiring database access",
    "api: tests for API endpoints"
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning"
]
pythonpath = ["src"]

[mypy.plugins]
pydantic.mypy = true

[[tool.mypy.overrides]]
module = ["src.app.*", "src.tests.*"]
ignore_missing_imports = true
